# make-ten

./: Dockerfile  README.md  entrypoint.sh  game.js  index.html  nginx.conf  pyproject.toml
site/: game.js
