[tool.poetry]
name = "make-ten"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pygame = "^2.5.2"


[build-system]
requires = ["poetry>0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 120

[tool.coverage.run]
source = ["./app"]
omit = ["*test*"]

[tool.coverage.report]
fail_under = 100
